--- a/calico/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico/operations/upgrading/kubernetes-upgrade.mdx
@@ -32,7 +32,7 @@ This may result in unexpected behavior and data.
 
 If you do not use OwnerReferences on resources in the projectcalico.org/v3 API group, you can skip this section.
 
-Starting in Calico v3.28, a change in the way UIDs are generated for projectcalico.org/v3 resources requires that you update any OwnerReferences
+Starting in {{prodname}} v3.28, a change in the way UIDs are generated for projectcalico.org/v3 resources requires that you update any OwnerReferences
 that refer to projectcalico.org/v3 resources as an owner. After upgrade, the UID for all projectcalico.org/v3 resources will be changed, resulting in any
 owned resources being garbage collected by Kubernetes.
 
@@ -42,11 +42,11 @@ owned resources being garbage collected by Kubernetes.
 
 ## Upgrading an installation that was installed using helm
 
-Prior to release v3.23, the Calico helm chart itself deployed the `tigera-operator` namespace and required that the helm release was
+Prior to release v3.23, the {{prodname}} helm chart itself deployed the `tigera-operator` namespace and required that the helm release was
 installed in the `default` namespace. Newer releases properly defer creation of the `tigera-operator` namespace to the user and allow installation
 of the chart into the `tigera-operator` namespace.
 
-When upgrading from a version of Calico v3.22 or lower to a version of Calico v3.23 or greater, you must complete the following steps to migrate
+When upgrading from a version of {{prodname}} v3.22 or lower to a version of {{prodname}} v3.23 or greater, you must complete the following steps to migrate
 ownership of the helm resources to the new chart location.
 
 ### Upgrade from Calico versions prior to v3.23.0
