More feedback applied

--- a/calico-enterprise/networking/ipam/migrate-pools.mdx
+++ b/calico-enterprise/networking/ipam/migrate-pools.mdx
@@ -75,7 +75,7 @@ Kubernetes cluster CIDR. Let's change the CIDR to **10.0.0.0/16**, which for the
 <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-Let’s run `kubectl get ippools` to see the IP pool, **default-ipv4-ippool**.
+Let’s run `kubectl get ippools` to see the IP pool, `default-ipv4-ippool`.
 
 ```
 NAME                  CREATED AT
@@ -84,15 +84,15 @@ default-ipv4-ippool   2024-03-28T16:14:28Z
 
 ### Step 1: Add a new IP pool
 
-We add a new **IPPool** with the CIDR range, **10.0.0.0/16**.
+We add a new `IPPool` with the CIDR range, **10.0.0.0/16**.
 
-Add the following to your `default` Installation, below the existing IP pool.
+Add the following to your `default` installation, below the existing IP pool.
 
-```
+```bash
 kubectl edit installation default
 ```
 
-```
+```yaml
 - name: new-ipv4-pool
   cidr: 10.0.0.0/16
   encapsulation: IPIP
@@ -112,14 +112,14 @@ test-pool             2024-03-28T18:30:15Z
 
 ### Step 2: Disable the old IP pool
 
-Edit the `default` Installation, and modify the **default-ipv4-ippool** such that it no longer selects
+Edit the `default` installation, and modify the `default-ipv4-ippool` so it no longer selects
 any nodes. This prevents IP allocation from the pool.
 
-```
+```bash
 kubectl edit installation default
 ```
 
-```
+```yaml
 - name: 192.168.0.0-16
   allowedUses:
   - Workload
@@ -165,7 +165,7 @@ kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
    kubectl -n ippool-test get pods -l app=nginx -o wide
    ```
 
-1. Clean up the ippool-test namespace.
+1. Clean up the `ippool-test` namespace.
 
    ```bash
    kubectl delete ns ippool-test
@@ -174,12 +174,12 @@ kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ### Step 5: Delete the old IP pool
 
 Now that you've verified that pods are getting IPs from the new range, you can safely delete the old pool. To do this,
-remove it from the default `Installation`, leaving only the newly create IP pool.
+remove it from the default installation, leaving only the newly create IP pool.
 
 </TabItem>
 <TabItem label="Manifest" value="Manifest-1">
 
-Let’s run `calicoctl get ippool -o wide` to see the IP pool, **default-ipv4-ippool**.
+Let’s run `calicoctl get ippool -o wide` to see the IP pool, `default-ipv4-ippool`.
 
 ```
 NAME                  CIDR             NAT    IPIPMODE   VXLANMODE   DISABLED
@@ -197,7 +197,7 @@ Let’s get started changing this pod to the new IP pool (10.0.0.0/16).
 
 ### Step 1: Add a new IP pool
 
-We add a new **IPPool** with the CIDR range, **10.0.0.0/16**.
+We add a new `IPPool` with the CIDR range, **10.0.0.0/16**.
 
 ```yaml
 apiVersion: projectcalico.org/v3
@@ -316,7 +316,7 @@ kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
    kubectl -n ippool-test get pods -l app=nginx -o wide
    ```
 
-1. Clean up the ippool-test namespace.
+1. Clean up the `ippool-test` namespace.
 
    ```bash
    kubectl delete ns ippool-test
