--- a/calico/networking/ipam/migrate-pools.mdx
+++ b/calico/networking/ipam/migrate-pools.mdx
@@ -92,7 +92,7 @@ Add the following to your `default` installation, below the existing IP pool.
 kubectl edit installation default
 ```
 
-```bash
+```yaml
 - name: new-ipv4-pool
   cidr: 10.0.0.0/16
   encapsulation: IPIP
@@ -179,7 +179,7 @@ remove it from the default installation, leaving only the newly create IP pool.
 </TabItem>
 <TabItem label="Manifest" value="Manifest-1">
 
-Let’s run `calicoctl get ippool -o wide` to see the IP pool, **default-ipv4-ippool**.
+Let’s run `calicoctl get ippool -o wide` to see the IP pool, `default-ipv4-ippool`.
 
 ```
 NAME                  CIDR             NAT    IPIPMODE   VXLANMODE   DISABLED
@@ -317,7 +317,7 @@ kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
    kubectl -n ippool-test get pods -l app=nginx -o wide
    ```
 
-1. Clean up the ippool-test namespace.
+1. Clean up the `ippool-test` namespace.
 
    ```bash
    kubectl delete ns ippool-test
