--- a/calico_versioned_docs/version-3.27/networking/index.mdx
+++ b/calico_versioned_docs/version-3.27/networking/index.mdx
@@ -6,6 +6,141 @@ hide_table_of_contents: true
 # Networking
 
 import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+import DocCard from '@theme/DocCard';
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+## Get started
+
+<DocCardList items={[
+  {
+    type: 'link',
+    href: 'fips',
+    icon: '📄',
+    title: 'Example Document 1',
+    description: 'This is the first example document description.',
+  },
+  {
+    type: 'link',
+    href: '/example2',
+    icon: '📄',
+    title: 'Example Document 2',
+    description: 'This is the second example document description.',
+  },
+  {
+    type: 'category',
+    label: 'Example Category',
+    items: [
+      {
+        type: 'link',
+        href: '/example3',
+        icon: '📄',
+        title: 'Example Document 3',
+        description: 'This is the third example document description.',
+      },
+      // You can add more items to this category if needed
+    ],
+  },
+  // You can add more items to the array if needed
+]} />
+
+## Configure networking
+
+<DocCardList items={[
+  {
+    type: 'link',
+    href: 'fips',
+    icon: '📄',
+    title: 'Example Document 1',
+    description: 'This is the first example document description.',
+  },
+  {
+    type: 'link',
+    href: '/example2',
+    icon: '📄',
+    title: 'Example Document 2',
+    description: 'This is the second example document description.',
+  },
+  {
+    type: 'category',
+    label: 'Example Category',
+    items: [
+      {
+        type: 'link',
+        href: '/example3',
+        icon: '📄',
+        title: 'Example Document 3',
+        description: 'This is the third example document description.',
+      },
+      // You can add more items to this category if needed
+    ],
+  },
+  // You can add more items to the array if needed
+]} />
+
+## Customize IP address management
+
+<DocCardList items={[
+  {
+    type: 'link',
+    href: 'fips',
+    icon: '📄',
+    title: 'Example Document 1',
+    description: 'This is the first example document description.',
+  },
+  {
+    type: 'link',
+    href: '/example2',
+    icon: '📄',
+    title: 'Example Document 2',
+    description: 'This is the second example document description.',
+  },
+  {
+    type: 'category',
+    label: 'Example Category',
+    items: [
+      {
+        type: 'link',
+        href: '/example3',
+        icon: '📄',
+        title: 'Example Document 3',
+        description: 'This is the third example document description.',
+      },
+      // You can add more items to this category if needed
+    ],
+  },
+  // You can add more items to the array if needed
+]} />
+
+## Calico networking for OpenStack
+
+<DocCardList items={[
+  {
+    type: 'link',
+    href: 'fips',
+    icon: '📄',
+    title: 'Example Document 1',
+    description: 'This is the first example document description.',
+  },
+  {
+    type: 'link',
+    href: '/example2',
+    icon: '📄',
+    title: 'Example Document 2',
+    description: 'This is the second example document description.',
+  },
+  {
+    type: 'category',
+    label: 'Example Category',
+    items: [
+      {
+        type: 'link',
+        href: '/example3',
+        icon: '📄',
+        title: 'Example Document 3',
+        description: 'This is the third example document description.',
+      },
+      // You can add more items to this category if needed
+    ],
+  },
+  // You can add more items to the array if needed
+]} />
+
