Apply suggestions from code review
Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

--- a/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
+++ b/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
@@ -81,12 +81,12 @@ To change default settings, modify the [Image Assurance](../reference/installati
 
 ### Configure exclusions for image scanning
 
-To specify which namespaces should be excluded from future scans follow the following steps.
+To specify which namespaces should be excluded from future scans, follow the following steps.
 
-- Modify your [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource to include the `exclusions.namespaces` field. List each namespace name you want to exclude.
+- Modify your [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource to include the `exclusions.namespaces` field. List each namespace you want to exclude.
 
 
-            ```
+            ```yaml
             apiVersion: image-assurance.operator.tigera.io/v1
             kind: ImageAssurance
             metadata:
@@ -100,11 +100,11 @@ To specify which namespaces should be excluded from future scans follow the foll
 
             ```
 
-In this example, the workloads in `kube-system` and `dev-qa` namespaces are excluded from future image scans. 
+In this example, the workloads in the `kube-system` and `dev-qa` namespaces are excluded from future image scans. 
 
 :::note
 
-Applying or updating namespace exclusions affects only future scans. Results from scans conducted prior to these exclusions will remain unchanged. The exclusions configured will apply to both cluster scanner and runtime view (Running Images tab).
+Applying or updating namespace exclusions affects only future scans. Results from scans conducted prior to these exclusions will remain unchanged. The exclusions configured will apply to both cluster scanner and runtime view (**Running Images** tab).
 
 :::
 
