--- a/calico-cloud/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud/image-assurance/understanding-scan-results.mdx
@@ -25,7 +25,7 @@ If you are using the CLI scanner and your cluster does not use the default conta
 ```bash
 kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
 ```
-For details, see [Image Assurance installation reference](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec).
+For details, see the [Image Assurance installation reference](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec).
 
 :::
 
