--- a/calico-cloud_versioned_docs/version-19-1/get-help/support.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/get-help/support.mdx
@@ -2,6 +2,8 @@
 description: Ways to get help and provide feedback.
 ---
 
+import IconUser from '/img/icons/user-icon.svg';
+
 # Support and feedback
 
 ## Contact Support
