Testing vale action with v4

--- a/calico/about/index.mdx
+++ b/calico/about/index.mdx
@@ -6,7 +6,7 @@ description: A brief description of Calico, deployment options, and features.
 
 ## What is {{prodname}}?
 
-{{prodname}} is a networking and security solution that enables Kubernetes workloads and non-Kubernetes/legacy workloads to communicate seamlessly and securely. 
+{{prodname}} is a networking and kubernetes picle security solution that enables Kubernetes workloads and non-Kubernetes/legacy workloads to communicate seamlessly and securely.
 
 ## Components and features
 
