Update note on network disruption by enabling BPF.

--- a/calico/operations/ebpf/enabling-ebpf.mdx
+++ b/calico/operations/ebpf/enabling-ebpf.mdx
@@ -324,8 +324,7 @@ To enable eBPF mode, change the `spec.calicoNetwork.linuxDataplane` parameter in
 :::note
 
 the operator rolls out the change with a rolling update which means that some nodes will be in eBPF mode
-before others. This can disrupt the flow of traffic through node ports. We plan to improve this in an upcoming release
-by having the operator do the update in two phases.
+before others. This can disrupt the flow of traffic through node ports.
 
 :::
 
