--- a/calico/reference/felix/configuration.mdx
+++ b/calico/reference/felix/configuration.mdx
@@ -54,8 +54,8 @@ The full list of parameters which can be set is as follows.
 | `EndpointReportingEnabled`          | `FELIX_ENDPOINTREPORTINGENABLED`          | Enable the endpoint status reporter. [Default: `false`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | boolean                                                                                         |
 | `EndpointStatusPathPrefix`          | `FELIX_ENDPOINTSTATUSPATHPREFIX`          | Path to the directory where Felix should create the `endpoint-status` directory. Choosing a mounted volume such as `/var/run/calico` is recommended as the directory can then be monitored by host processes such as the Calico CNI. Leaving this field empty disables endpoint-status files. [Default: ""]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | string                                                                                          |
 | `ExternalNodesCIDRList`             | `FELIX_EXTERNALNODESCIDRLIST`             | Comma-delimited list of IPv4 or CIDR of external-non-calico-nodes from which IPIP traffic is accepted by calico-nodes. [Default: ""]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | string                                                                                          |
-| `FailsafeInboundHostPorts`          | `FELIX_FAILSAFEINBOUNDHOSTPORTS`          | Comma-delimited list of UDP/TCP/SCTP ports and CIDRs that Felix will allow incoming traffic to host endpoints on irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. For backwards compatibility, if the protocol is not specified, it defaults to "tcp". If a CIDR is not specified, it will allow traffic from all addresses. To disable all inbound host ports, use the value `none`. The default value allows ssh access, DHCP, BGP, etcd and the Kubernetes API. [Default: `tcp:22, udp:68, tcp:179, tcp:2379, tcp:2380, tcp:5473, tcp:6443, tcp:6666, tcp:6667`]                                                                                    | string                                                                                          |
-| `FailsafeOutboundHostPorts`         | `FELIX_FAILSAFEOUTBOUNDHOSTPORTS`         | Comma-delimited list of UDP/TCP/SCTP ports and CIDRs that Felix will allow outgoing traffic from host endpoints to irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. For backwards compatibility, if the protocol is not specified, it defaults to "tcp". If a CIDR is not specified, it will allow traffic from all addresses. To disable all outbound host ports, use the value `none`. The default value opens etcd's standard ports to ensure that Felix does not get cut off from etcd as well as allowing DHCP, DNS, BGP and the Kubernetes API. [Default: `udp:53, udp:67, tcp:179, tcp:2379, tcp:2380, tcp:5473, tcp:6443, tcp:6666, tcp:6667`] | string                                                                                          |
+| `FailsafeInboundHostPorts`          | `FELIX_FAILSAFEINBOUNDHOSTPORTS`          | List of PortProto struct objects including UDP/TCP/SCTP ports and CIDRs that Felix will allow incoming traffic to host endpoints on irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. For backwards compatibility, if the protocol is not specified, it defaults to `"tcp"`. If a CIDR is not specified, it will allow traffic from all addresses. To disable all inbound host ports, use the value `[]`. The default value allows ssh access, DHCP, BGP, etcd and the Kubernetes API. [Default: `[{"port":22,"protocol":"tcp"},{"port":68,"protocol":"udp"},{"port":179,"protocol":"tcp"},{"port":2379,"protocol":"tcp"}, {"port":2380,"protocol":"tcp"}, {"port":5473,"protocol":"tcp"}, {"port":6443,"protocol":"tcp"}, {"port":6666,"protocol":"tcp"}, {"port":6667,"protocol":"tcp"}]`]                                                                                    | list                                                                                          |
+| `FailsafeOutboundHostPorts`         | `FELIX_FAILSAFEOUTBOUNDHOSTPORTS`         | List of PortProto struct objects including UDP/TCP/SCTP ports and CIDRs that Felix will allow outgoing traffic from host endpoints to irrespective of the security policy. This is useful to avoid accidentally cutting off a host with incorrect configuration. For backwards compatibility, if the protocol is not specified, it defaults to `"tcp"`. If a CIDR is not specified, it will allow traffic from all addresses. To disable all outbound host ports, use the value `[]`. The default value opens etcd's standard ports to ensure that Felix does not get cut off from etcd as well as allowing DHCP, DNS, BGP and the Kubernetes API. [Default: `[{"port":53,"protocol":"udp"},{"port":67,"protocol":"udp"}, {"port":179,"protocol":"tcp"}, {"port":2379,"protocol":"tcp"}, {"port":2380,"protocol":"tcp"}, {"port":5473,"protocol":"tcp"}, {"port":6443,"protocol":"tcp"}, {"port": 6666,"protocol":"tcp"}, {"port":6667,"protocol":"tcp"}]`] | list                                                                                          |
 | `FelixHostname`                     | `FELIX_FELIXHOSTNAME`                     | The hostname Felix reports to the plugin. Should be used if the hostname Felix autodetects is incorrect or does not match what the plugin will expect. [Default: `socket.gethostname()`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         | string                                                                                          |
 | `HealthEnabled`                     | `FELIX_HEALTHENABLED`                     | When enabled, exposes felix health information via an http endpoint.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             | boolean                                                                                         |
 | `HealthHost`                        | `FELIX_HEALTHHOST`                        | The address on which Felix will respond to health requests. [Default: `localhost`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | string                                                                                          |
