--- a/calico_versioned_docs/version-3.25/reference/host-endpoints/failsafe.mdx
+++ b/calico_versioned_docs/version-3.25/reference/host-endpoints/failsafe.mdx
@@ -28,7 +28,7 @@ The lists of failsafe ports can be configured via the configuration parameters
 `FailsafeInboundHostPorts` and `FailsafeOutboundHostPorts`
 described in [Configuring Felix](../felix/configuration.mdx)
 . They
-can be disabled by setting each configuration value to "none".
+can be disabled by setting each configuration value to "[]".
 
 :::note
 
